--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -4,4 +4,5 @@
     <view class="item" bindtap="jump" data-page="/pages/index/arrange/index">arrange</view>
     <view class="item" bindtap="jump" data-page="/pages/index/uploadFile/index">uploadFile</view>
     <view class="item" bindtap="jump" data-page="/pages/index/openData/index">openData</view>
+    <view class="item" bindtap="jump" data-page="/pages/index/login/index">login</view>
 </view>
